--- a/pricing.html
+++ b/pricing.html
@@ -197,48 +197,11 @@
           <img class="h-75" src="img/service_example/gambar-4.png" alt="Design 3" class="img-fluid">
         </div>
       </div>
-
-      <div class="row g-4">
-          <!-- First Design -->
-          <div class="col-md-4">
-              <div class="design-example">
-                  <img src="https://via.placeholder.com/350x600" alt="Design 1" class="img-fluid">
-              </div>
-          </div>
-
-          <!-- Second Design -->
-          <div class="col-md-4">
-              <div class="design-example">
-                  <img src="https://via.placeholder.com/600x400" alt="Design 2" class="img-fluid">
-              </div>
-          </div>
-
-          <!-- Third Design -->
-          <div class="col-md-4">
-              <div class="design-example">
-                  <img src="https://via.placeholder.com/350x600" alt="Design 3" class="img-fluid">
-              </div>
-          </div>
-
-          <!-- Fourth Design -->
-          <div class="col-md-6">
-              <div class="design-example">
-                  <img src="https://via.placeholder.com/800x450" alt="Design 4" class="img-fluid">
-              </div>
-          </div>
-
-          <!-- Fifth Design -->
-          <div class="col-md-6">
-              <div class="design-example">
-                  <img src="https://via.placeholder.com/800x450" alt="Design 5" class="img-fluid">
-              </div>
-          </div>
-      </div>
   </div>
 </section>
 
 <!-- section customer review -->
- <section class="py-5 my-5">
+ <section class="pb-5 mb-5">
   <div class="container">
     <div class="row">
       <div class="col-4">
